update the README.md with command line instruction for java 9 and 10